<resources>
    <string name="app_name">BabyLangu</string>
    <string name="settings">Settings</string>
    <string name="remove">Remove</string>
    <string name="empty_list">Empty list</string>
    <string name="any_dictionaries">You don\'t have\nany dictionaries.</string>
    <string name="item_image">Item image</string>
    <string name="baby_word">Baby word</string>
    <string name="meaning">Meaning</string>
    <string name="new_wording">New wording</string>
    <string name="kid_name">Kid name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="add_new">Add new</string>
    <string name="kid_saved">Kid saved</string>
    <string name="kid_not_saved">Kid not saved</string>
</resources>
