<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.joannahulek.babylangu.activities.EditorActivity">

    <LinearLayout
        android:id="@+id/word_editor_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/word_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_wording"
            android:inputType="text" />

        <EditText
            android:id="@+id/meaning_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/meaning"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/kid_editor_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/word_editor_layout"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/kids_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/kid_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/birth_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_of_birth"
            android:inputType="date" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_fab"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:src="@drawable/plus_background" />

</RelativeLayout>
