<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/item_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/item_image"
        tools:src="@drawable/book" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/item_text_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_main_text"
                style="@style/MainTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                tools:text="Main text" />

            <TextView
                android:id="@+id/item_description_text"
                style="@style/DescriptionTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top"
                tools:text="description" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_settings_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/item_settings_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/settings"
                android:src="@drawable/ic_settings_grey600_48dp" />

            <ImageView
                android:id="@+id/item_remove_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/remove"
                android:src="@drawable/ic_clear_grey600_48dp" />
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>